# dokito-job-processing

./: .devenv.flake.nix  .gitignore  README.md  devenv.nix  devenv.yaml  flake.nix  justfile  ny_puc_data_schema.sql  upload_script.py
api/: Dockerfile  database.go  dokito_client.go  (+9 more)
rust-data-transforms/: .devenv.flake.nix  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build_and_run_container.sh  devenv.nix  devenv.yaml  example.env  flake.nix  main.nix  nix.nix
rust-data-transforms/dokito_processing_monolith/: Cargo.toml
rust-data-transforms/dokito_processing_monolith/src/: case_worker.rs  jurisdiction_schema_mapping.rs  main.rs  openscraper_data_traits.rs  types.rs
rust-data-transforms/dokito_processing_monolith/src/indexes/: attachment_url_index.rs  s3_storage_and_saving.rs
rust-data-transforms/dokito_processing_monolith/src/processing/: llm_prompts.rs
rust-data-transforms/dokito_types/: Cargo.toml
rust-data-transforms/dokito_types/src/: lib.rs  processed.rs  s3_stuff.rs
rust-data-transforms/src/: case_worker.rs  cli_input_types.rs  data_processing_traits.rs  jurisdiction_schema_mapping.rs  lib.rs  main.rs  openscraper_data_traits.rs  s3_stuff.rs  types.rs
rust-data-transforms/src/indexes/: attachment_url_index.rs  mod.rs  s3_storage_and_saving.rs
rust-data-transforms/src/processing/: attachments.rs  llm_prompts.rs  match_raw_processed.rs  mod.rs  reparse_all.rs  test.rs
rust-data-transforms/src/server/: admin_routes.rs  mod.rs  public_routes.rs  queue_routes.rs  s3_routes.rs  scraper_check_completed.rs
rust-data-transforms/src/sql_ingester_tasks/: database_author_association.rs  dokito_sql_connection.rs  initialize_config.rs  mod.rs  nypuc_ingest.rs  redis_author_cache.rs
rust-data-transforms/src/types/: attachments.rs  env_vars.rs  mod.rs  processed.rs  raw.rs  s3_stuff.rs
(+140 files in other folders)
