[package]
name = "rust-data-transforms"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "process-dockets"
path = "src/bin/process_dockets.rs"

[[bin]]
name = "upload-dockets"
path = "src/bin/upload_dockets.rs"

[[bin]]
name = "download-attachments"
path = "src/bin/download_attachments.rs"

[[bin]]
name = "database-utils"
path = "src/bin/database_utils.rs"

[lib]
name = "rust_data_transforms"
path = "src/lib.rs"

[dependencies]
non-empty-string = {git = "https://github.com/mycorrhiza-inc/non-empty-string.git", branch="add-schemars-support", features = ["serde", "schemars09", "macros"]}
mycorrhiza_common = {git = "https://github.com/mycorrhiza-inc/common-rs/", tag="v0.1.0",features = ["all"]}
openscraper_types = {git = "https://github.com/open-pucs/scrapers/"}

reqwest = { version = "0.12.5", features = ["json"] }
blake2 = "0.10.6"
base64 = "0.22.1"
serde_json = "1.0.121"
chrono = { version = "0.4.39", features = ["now", "serde"] }
uuid = {version ="1.18.1", features = ["serde", "v4"]}

serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
schemars = { version = "0.9", features = ["chrono04", "uuid1"] }
aws-sdk-s3 = "1.85.0"
aws-config = "1.6.2"

anyhow = "1.0.98"
hex = "0.4.3"
rand_core = "0.9.3"
rand = "0.9.1"
thiserror = "2.0.12"
futures-util = "0.3.31"
clap = { version = "4.0", features = ["derive"] }

tracing = "0.1.41"
tracing-subscriber = "0.3"
url = "2.5.4"
urlencoding = "2.1.3"
serde_with = "3.14.0"
async-trait = "0.1.88"
rkyv = { version = "0.8.11", features = ["aligned", "alloc"] }

sqlx = { version = "0.8", features = ["chrono", "json", "postgres", "runtime-tokio", "tls-native-tls", "uuid"] }
futures = "0.3.31"